# theme-color-tool

./: AGENTS.md  README.md  apply-theme.py  pyproject.toml
omarchy_theme_tool/: __init__.py
templates/: gtk.css
theme_color_tool/: apply_theme.py
