[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omarchy-theme-tool"
version = "0.1.1"
description = "Apply Base16 schemes to Omarchy theme files."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Omarchy Theme Tool"},
]
keywords = ["base16", "theme", "omarchy", "colors"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
omarchy-apply = "omarchy_theme_tool.apply_theme:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["omarchy_theme_tool"]
