[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "theme-color-tool"
version = "0.1.2"
description = "Apply Base16 schemes to theme files."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Theme Color Tool"},
]
keywords = ["base16", "theme", "colors"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
theme-color-apply = "theme_color_tool.apply_theme:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["theme_color_tool"]
